--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "ndut-helper",
   "version": "0.0.1",
   "description": "Helper functions for Ndut Ecosystem",
-  "main": "index.js",
+  "main": "src/index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -23,8 +23,12 @@
   },
   "homepage": "https://github.com/ardhi/ndut-helper#readme",
   "dependencies": {
-    "aneka": "0.0.10",
+    "JSONStream": "^1.3.5",
+    "aneka": "file:../aneka",
     "fast-glob": "^3.2.7",
-    "lodash": "^4.17.21"
+    "fastify-plugin": "^3.0.0",
+    "fs-extra": "^10.0.0",
+    "lodash": "^4.17.21",
+    "scramjet": "^4.36.1"
   }
 }
