--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fastify-plugin": "^3.0.0",
     "fs-extra": "^10.0.0",
     "lodash": "^4.17.21",
+    "luxon": "^2.1.1",
     "scramjet": "^4.36.1"
   }
 }
