--- a/package.json
+++ b/package.json
@@ -22,14 +22,5 @@
     "url": "https://github.com/ardhi/ndut-helper/issues"
   },
   "homepage": "https://github.com/ardhi/ndut-helper#readme",
-  "dependencies": {
-    "JSONStream": "^1.3.5",
-    "aneka": "file:../aneka",
-    "fast-glob": "^3.2.7",
-    "fastify-plugin": "^3.0.0",
-    "fs-extra": "^10.0.0",
-    "lodash": "^4.17.21",
-    "luxon": "^2.1.1",
-    "scramjet": "^4.36.1"
-  }
+  "dependencies": {}
 }
